--- a/news.html
+++ b/news.html
@@ -56,18 +56,19 @@
                             PI: Thomas Harmon <br>
                             Professor, Civil & Environmental Engineering<br>
                             University of California, Merced<br>
-                            laca@ucmerced.edu
+                            <a href="mailto:laca@ucmerced.edu">laca@ucmerced.edu</a>
                         </p>
                     </section>
                 </div>
             </div>
+        </div>
 
-            <!-- Copyright -->
-            <div id="copyright">
-                <ul class="menu">
-                    <li>&copy; 2021; CITRIS & Banatao Institute; All rights reserved;</li>
-                </ul>
-            </div>
+        <!-- Copyright -->
+        <div id="copyright">
+            <ul class="menu">
+                <li>&copy; 2021; CITRIS & Banatao Institute; All rights reserved</li>
+            </ul>
+        </div>
         </div>
     </footer>
 
