--- a/people.html
+++ b/people.html
@@ -70,7 +70,7 @@
                             PI: Thomas Harmon <br>
                             Professor, Civil & Environmental Engineering<br>
                             University of California, Merced<br>
-                            laca@ucmerced.edu
+                            <a href="mailto:laca@ucmerced.edu">laca@ucmerced.edu</a>
                         </p>
                     </section>
                 </div>
@@ -80,7 +80,7 @@
         <!-- Copyright -->
         <div id="copyright">
             <ul class="menu">
-                <li>&copy; 2021; CITRIS & Banatao Institute; All rights reserved;</li>
+                <li>&copy; 2021; CITRIS & Banatao Institute; All rights reserved</li>
             </ul>
         </div>
         </div>
