--- a/index.html
+++ b/index.html
@@ -288,34 +288,32 @@
 			</div>
 	</div>
 
-	<!-- Footer -->
-	<footer id="footer">
-		<div class="container">
-			<div class="row gtr-200">
-				<div class="col-12">
+    <!-- Footer -->
+    <footer id="footer">
+        <div class="container">
+            <div class="row gtr-200">
+                <div class="col-12">
+                    <section id="contact">
+                        <h2 class="major"><span>Contact us</span></h2>
+                        <p>
+                            PI: Thomas Harmon <br>
+                            Professor, Civil & Environmental Engineering<br>
+                            University of California, Merced<br>
+                            <a href="mailto:laca@ucmerced.edu">laca@ucmerced.edu</a>
+                        </p>
+                    </section>
+                </div>
+            </div>
+        </div>
 
-					<!-- About -->
-
-					<section id="contact">
-						<h2 class="major"><span>Contact us</span></h2>
-						<p>
-							PI: Thomas Harmon <br>
-							Professor, Civil & Environmental Engineering<br>
-							University of California, Merced<br>
-							laca@ucmerced.edu
-						</p>
-					</section>
-				</div>
-
-			</div>
-			<!-- Copyright -->
-			<div id="copyright">
-				<ul class="menu">
-					<li>&copy; 2021; CITRIS & Banatao Institute; All rights reserved;</li>
-				</ul>
-			</div>
-		</div>
-	</footer>
+        <!-- Copyright -->
+        <div id="copyright">
+            <ul class="menu">
+                <li>&copy; 2021; CITRIS & Banatao Institute; All rights reserved</li>
+            </ul>
+        </div>
+        </div>
+    </footer>
 
 	</div>
 
