--- a/news.html
+++ b/news.html
@@ -113,7 +113,7 @@
                                     "</a>" +
                                     "<p>" +
                                     data[i].DESCRIPTION +
-                                    (((data[i].LINK).toString() === 'NO_BUTTON') ? '' : '<center> <a class="button" href="' + data[i].LINK + '">'+ data[i].BUTTON_TEXT +'</a> ') +
+                                    (((data[i].LINK).toString() === 'NO_BUTTON') ? '' : '<center> <a class="button" href="' + data[i].LINK + '" target=_blank>'+ data[i].BUTTON_TEXT +'</a> ') +
                                     "</p>" +
                                     "</article>"
                                 )
