Added LACA Logo

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 			</div>
 		</header>
 		<nav id="nav">
+			<a href="/index">
+				<img style="position:relative; z-index: 100000; margin: 0.1em 0em 0em .5em; float:left; height:55px; width:55px"
+					class="image featured" src="/images/LOGO_FC.png">
+			</a>
 			<ul>
 				<li><a href="index">Home</a></li>
 				<li><a href="people">People</a></li>
@@ -43,7 +47,9 @@
 				<div class="row gtr-200">
 					<div class="col-12">
 						<section class="box post">
-							<h2 class="major2"><span>Labor and Automation in California Agriculture</span></h2>
+							<h2 class="major2"><span><!-- <img style="width:5%;margin-right: -10px;" class="image left" src="images/LOGO_FC.png" alt="" /> -->
+								Labor and Automation in California Agriculture</span></h2>
+							<img style="width:10%;" class="image left" src="images/LOGO_FC.png" alt="" />
 							<p>
 								<!-- California is the fifth largest economy in the world, a global leader in technology, and
 								the nation’s most agriculturally diverse and productive state, and yet its food system
