--- a/news.html
+++ b/news.html
@@ -20,6 +20,10 @@
             </div>
         </header>
         <nav id="nav">
+            <a href="/index">
+				<img style="position:relative; z-index: 100000; margin: 0.1em 0em 0em .5em; float:left; height:55px; width:55px"
+					class="image featured" src="/images/LOGO_FC.png">
+			</a>
             <ul>
                 <li><a href="index">Home</a></li>
                 <li><a href="people">People</a></li>
