--- a/news.html
+++ b/news.html
@@ -102,7 +102,7 @@
                                     "<h3>" +
                                     '<a href="' +
                                     data[i].LINK +
-                                    '">' +
+                                    '" target=_blank>' +
                                     data[i].TITLE +
                                     "</a>" +
                                     "</h3>" +
@@ -110,10 +110,10 @@
                                     "</header>" +
                                     '<a href="' +
                                     data[i].LINK +
-                                    '" class="image featured">' +
+                                    '" class="image featured" target=_blank>' +
                                     '<img src="images/news/' +
                                     data[i].ID +
-                                    '.jpg" alt="" />' +
+                                    '.jpg" alt=""  target=_blank>' +
                                     "</a>" +
                                     "<p>" +
                                     data[i].DESCRIPTION +
