--- a/people.html
+++ b/people.html
@@ -15,8 +15,7 @@
         <header id="header">
             <div class="logo container">
                 <div>
-                    <h1><a href="index.html" id="logo"></a>Labor and Automation in California Agriculture</h1>
-
+                    <h1 id="logo">People</h1>
                 </div>
             </div>
         </header>
