--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<header id="header">
 			<div class="logo container">
 				<div>
-					<h1><a href="index" id="logo"></a>Labor and Automation in California Agriculture</h1>
+					<h1 id="logo">Labor and Automation in California Agriculture</h1>
 				</div>
 			</div>
 		</header>
