Added all videos and discussion tab

--- a/people.html
+++ b/people.html
@@ -28,6 +28,7 @@
                 <li> <a href="index">Home</a></li>
                 <li> <a href="people">People</a> </li>
                 <li> <a href="news">News & Events</a> </li>
+                <li><a href="discussion">Discussions</a></li>
             </ul>
         </nav>
         <!-- <div
